@@ -1,5 +1,10 @@
 2001-06-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
+	* scheduler/transport.c, scheduler/msgerror.c:
+	    Oh no, one-off string length after  cfgdirpath()  function
+	    behaviour change.   Got around to write \0 to child, which
+	    promptly misbehaved...
+
 	* scheduler/transport.c, scheduler/conf.c:
 	    Under some mysterious conditions (Linux kernel 2.4.5-pre4... ??)
 	    the scheduler does not get select on read on dead childrens
